# pumpkin-py

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.rst  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  README.md  default.configmap.yaml  default.docker.env  default.env  default.kube.yaml  docker-compose.yml  entrypoint.sh  gettext.py  pumpkin.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  strawberry.py
.github/workflows/: build-image.yml  build.yml  docker-test.yml
cogs/: info.txt
core/: __init__.py  acl.py  check.py  config.py  exceptions.py  help.py  i18n.py  lang.cs.ini  lang.en.ini  log.conf  logcache.py  logger.py  logging.py  logs.py  text.py  utils.py
core/lang/: cs.ini  en.ini
core/po/: cs.popie  sk.po  sk.popie
database/: __init__.py  acl.py  config.py  info.txt  language.py  logger.py  logging.py  spamchannel.py  spamroom.py
docs/: conf.py  index.rst  installation.rst  legal.rst  requirements.txt
docs/_snippets/: _apt_dependencies.rst  _outdated.rst  _rfc_notice.rst  _source_env.rst
docs/about/: legal.rst  versioning.rst
docs/development/: access_tokens.rst  code_quality.rst  developing_modules.rst  git_branch_workflow.rst  imports.rst  index.rst  installation.rst  logging.rst  repository.rst  translations.rst
docs/general/: index.rst
docs/getting-started/: index.rst
docs/installation/: 01-database.rst  01-docker.rst  02-direct.rst  02-token.rst  03-config.rst  03-development.rst  03-docker.rst  04-config.rst  04-direct.rst  05-config.rst  _database.rst  _docker.rst  _token.rst  _venv.rst  index.rst
docs/production/: config.rst  containers.rst  direct.rst  docker.rst  k8s.rst  podman.rst
logs/: info.txt
modules/: __init__.py
modules/base/: __init__.py  info.py  repo.conf
pie/: __init__.py  check.py  cli.py  exceptions.py  help.py
pie/_tracing/: __init__.py
pie/acl/: __init__.py  database.py
pie/database/: __init__.py  config.py
pie/i18n/: __init__.py  database.py
pie/logger/: __init__.py  database.py
pie/po/: cs.popie  sk.popie
pie/repository/: __init__.py
pie/spamchannel/: __init__.py  database.py
tests/: __init__.py  language_file_checker.py  test_core_utils.py  test_languages.py  test_modules_base_admin.py
(+91 files in other folders)
