[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pumpkin.py"
description = "Modular discord bot"
dynamic = ["readme"]
requires-python = ">=3.8"
license = {test = "GNU GPL v3"}
keywords = ["discord", "bot"]
authors = []
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
	"discord.py",
	"GitPython>=3.1",
	"psycopg-binary>=2.9",
	"requests>=2.27",
	"SQLAlchemy>=1.4,<2.0",
	"ring>=0.9",
	"python-dateutil>=2.8"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[project.optional-dependencies]
dev = [
	"pre-commit",
	"black==22.12.0", "flake8", "flake8-print", "flake8-todo",
	"bandit",
	"pytest",
	"git+https://github.com/pumpkin-py/pumpkin-tools.git"
]
