[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pumpkin.py"
description = "Modular discord bot"
version = "0.0.0"
dynamic = ["readme"]
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["discord", "bot"]
authors = []
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
	"discord.py",
	"GitPython>=3.1",
	"psycopg-binary>=2.9",
	"requests>=2.27",
	"SQLAlchemy==2.0.0rc3",
	"ring>=0.9",
	"python-dateutil>=2.8"
]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
	"pre-commit",
	"black==22.12.0", "flake8", "flake8-print", "flake8-todo",
	"bandit",
	"pytest",
]

[project.scripts]
pumpkin = "pumpkin:main"

[project.entry-points."pumpkin.repos"]
base = "pumpkin_base:repo"
